# KazeCoders

./: .gitignore  NotReadme.txt  README.md  Random.txt  backend.py  backend_clean.py  detector.py  normalizer.py  pyproject.toml  run_detector.py  runner.py
backend/: __init__.py  backend.py  detector.py  extractor.py  runner.py
docs/: IPDR_SUPPORT.md
scripts/: move_files.py
